--- a/meta/authors.yml
+++ b/meta/authors.yml
@@ -1,6 +1,6 @@
 authors:
-  - slug: wutali
-    name: Takahiro Fujiwara
+  - slug: ellisg
+    name: Ellis Garaudy
     introduction:
-      Co-founder and CTO at Fuller, Inc. / Software & Data Engineer /
-      Python / Golang / React
+      Co-founder and CTO @ Cornerbloq, Inc. / Software & Systems Engineer /
+      Javascript / React / C# / Python
