--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.0.3",
+    "@emotion/react": "^11.1.2",
+    "@emotion/styled": "^11.0.0",
     "@mapbox/rehype-prism": "^0.5.0",
     "@svgr/webpack": "^5.4.0",
     "@types/js-yaml": "^3.12.5",
     "date-fns": "^2.11.1",
+    "framer-motion": "^3.0.0",
     "gray-matter": "^4.0.2",
     "js-yaml": "^3.14.0",
     "next": "9.5.1",
